<resources>
    <string name="app_name">dogdom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->


    <!--button-->
    <string name="buttons_welcome">Please interact with the buttons, we\'ll track your clicks!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="see_all_logs">SEE ALL LOGS</string>
    <string name="delete_logs">Delete Logs</string>
    <string name="cancel_button_description">cancel_titleBar</string>


    <!--home-->
    <string name="search_bar_text">Send the sample</string>

    <!--circle-->
    <string name="Circle_title">Circle</string>
    <string name="Circle_item_text1">Popular circle</string>
    <string name="Circle_item_text2">The circle to join</string>
    <string name="Circle_chat_input_hint">The input information</string>
    <string name="Circle_item_title">I love Golden Retriever</string>
    <string name="Circle_item_content">548 Members</string>


    <!--message-->
    <string name="message_title">Message</string>
    <string name="message_item_text1">Love dog little assistant</string>
    <string name="message_item_text2">Congratulations! Your article was recommended by dog lovers to feature</string>
    <string name="message_chat_input_hint">The input information</string>

    <!--Release-->
    <string name="release_title">Release something new</string>
    <string name="release_desription">What you are thinking right now...</string>
    <string name="release_cancle">Cancle</string>
    <string name="release_release">Release</string>
    <string name="release_next">Next</string>

    <!--Release-->
    <string name="release_article_titlebar">Writing articles</string>
    <string name="release_article_title">Enter the title</string>
    <string name="release_article_content">The input text</string>
    <string name="release_image_title">새 개시물</string>
    <string name="release_image_done">등록</string>

    <!--Personal-->
    <string name="profile_name">Kelly Goldsmith</string>
    <string name="profile_description">Golden Retriever · Mobile </string>
    <string name="profile_praise">Praise</string>
    <string name="profile_dynamic">Dynamic</string>
    <string name="profile_share">Share</string>


    <string name="personal_followers">Followers</string>
    <string name="personal_following">Following</string>
    <string name="personal_collections">Collections</string>
    <string name="personal_order">Order</string>
    <string name="personal_darkmode">Dark Mode</string>


    <!-- Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_account_and_security">Account and Security</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_new_message_notification">New message notification</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_general">General</string>
    <string name="settings_help_and_feedback">Help and Feedback</string>
    <string name="settings_about_dogdom">About Dogdom</string>
    <string name="settings_switch_account">Switch Account</string>
    <string name="settings_log_out">Log out</string>

    <!--    API Key-->
    <string name="gods_api_key">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</string>

</resources>